attempted to fix slightly off center list items

--- a/src/App.css
+++ b/src/App.css
@@ -142,7 +142,7 @@ p {
     justify-content: center;
     align-items: center;
     text-align: center;
-    width: 85%;
+    width: 90%;
 }
 
 .portfolio ul {
@@ -160,6 +160,10 @@ a {
     padding: 12px 16px;
 }
 
+li {
+    text-align: center;
+}
+
 a:hover {
     text-decoration: underline;
     background-color: rgba(137, 110, 255, 0.3);
@@ -167,9 +171,13 @@ a:hover {
 }
 
 .repos {
-    list-style-type: none;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     text-align: center;
     align-items: center;
+
 }
 
 .blogs {
@@ -473,7 +481,6 @@ a:hover {
         font-weight: bold;
         font-family: 'Orbitron', sans-serif;
         font-size: 1.5em;
-        
     }
     
     .nav-toggle:hover {
@@ -543,10 +550,6 @@ a:hover {
         width: 80%;
     }
 
-    li {
-        width: auto;
-    }
-
     .pricing-intro h1, .pre-booking-discount h1, .basic h1, .plus h1, .elite h1  {
         font-size: 1.5em;
         font-family: 'Orbitron', sans-serif;
@@ -564,7 +567,8 @@ a:hover {
 
     .bloglist a, .portfolio a {
         font-size: 1.25em;
-        width: 75%;
+        width: 90%;
+        padding: 0;
     }
 
     .tier-and-price {
@@ -574,6 +578,7 @@ a:hover {
     .details {
         width: 80%;
     }
+
 }
 
 .header-li {
